Added more translations.

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1,4 +1,22 @@
 {
     "BETA": "BETA",
-    "BETA_TOOLTIP": "Este es un producto BETA configurado con propósitos de prueba. Algunas características pueden no funcionar correctamente."
+    "BETA_TOOLTIP": "Este es un producto BETA configurado con propósitos de prueba. Algunas características pueden no funcionar correctamente.",
+    "IDIOMA": "Idioma",
+    "REDES_SOC": "Redes sociales",
+    "APLICACIONES": "Aplicaciones",
+    "AYUDA": "Ayuda",
+    "USUARIO": "Usuario",
+    "AUTENTICARSE": "Autenticarse",
+    "REGISTRARSE": "Registrarse",
+    "ACERCA_DE": "Acerca de",
+    "PRIVACIDAD": "Privacidad",
+    "CONTACTOS": "Contactos",
+    "DES_ORGANIZACIONES": "Desambiguar organizaciones",
+    "IMPORT": "Importar",
+    "PERFIL_USUARIO": "Perfil de usuario",
+    "CAMBIAR_CONTRASEÑA": "Cambiar contraseña",
+    "SEGURIDAD": "Seguridad",
+    "ADMINISTRACION": "Administración",
+    "SALIR": "Salir",
+    "YO": "Yo"
 }
