--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,4 +1,22 @@
 {
     "BETA": "BETA",
-    "BETA_TOOLTIP": "This is a BETA product configured for testing purposes. Some features can not work properly."
+    "BETA_TOOLTIP": "This is a BETA product configured for testing purposes. Some features can not work properly.",
+    "IDIOMA": "Language",
+    "REDES_SOC": "Social networks",
+    "APLICACIONES": "Applications",
+    "AYUDA": "Help",
+    "USUARIO": "User",
+    "AUTENTICARSE": "Log in",
+    "REGISTRARSE": "Sign up",
+    "ACERCA_DE": "About",
+    "PRIVACIDAD": "Privacy",
+    "CONTACTOS": "Contact",
+    "DES_ORGANIZACIONES": "Disambiguate organizations",
+    "IMPORT": "Import",
+    "PERFIL_USUARIO": "User profile",
+    "CAMBIAR_CONTRASEÑA": "Change password",
+    "SEGURIDAD": "Security",
+    "ADMINISTRACION": "Settings",
+    "SALIR": "Exit",
+    "YO": "Me"
 }
