Added translations to the home.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -21,10 +21,21 @@
     "ADMINISTRACION": "Settings",
     "SALIR": "Exit",
     "YO": "Me",
+    "PUB_CIENT_CUBANAS": "Cuban Scientific Publications",
+    "PROD_SERV": "Products and Services",
     "CATALOGO": "Catalog",
+    "SCEIBA_CATALOGO": "Sceiba Catalog",
+    "SCEIBA_CATALOGO_SUB": "Catalog of Cuban Scientific Publications",
     "ORGANIZACIONES": "Organizations",
+    "SCEIBA_ORGANIZACIONES": "Sceiba Organizations",
+    "SCEIBA_ORGANIZACIONES_SUB": "Identification System for Organizations",
     "VOCABULARIOS": "Vocabularies",
-    "REG_REV_CIENT_MES": "MES Registry of Scientific Journals",
+    "SCEIBA_VOCABULARIOS": "Sceiba Vocabularies",
+    "SCEIBA_VOCABULARIOS_SUB": "Thesaurus and Ontologies System",
+    "REVISTAS_MES": "MES Journals",
+    "DIRECTORIO_MES": "MES Directory",
+    "DIRECTORIO_MES_SUB": "MES Register of Scientific Journals",
+    "ACCEDER": "Access",
     "PROYECTO_TOCORORO": "Tocororo Project, an effort for scientific communication in Cuba",
     "PROYECTO_VLIR": "VLIR Project",
     "SCEIBA_PRIVACIDAD_1": "Sceiba is open source and open access and distributes its contents,",
