--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -21,10 +21,21 @@
     "ADMINISTRACION": "Administración",
     "SALIR": "Salir",
     "YO": "Yo",
+    "PUB_CIENT_CUBANAS": "Publicaciones Científicas Cubanas",
+    "PROD_SERV": "Productos y Servicios",
     "CATALOGO": "Catálogo",
+    "SCEIBA_CATALOGO": "Sceiba Catálogo",
+    "SCEIBA_CATALOGO_SUB": "Catálogo de Publicaciones Científicas Cubanas",
     "ORGANIZACIONES": "Organizaciones",
+    "SCEIBA_ORGANIZACIONES": "Sceiba Organizaciones",
+    "SCEIBA_ORGANIZACIONES_SUB": "Sistema de Identificación de Organizaciones",
     "VOCABULARIOS": "Vocabularios",
-    "REG_REV_CIENT_MES": "Registro de Revistas Científicas del MES",
+    "SCEIBA_VOCABULARIOS": "Sceiba Vocabularios",
+    "SCEIBA_VOCABULARIOS_SUB": "Sistema de Tesauros y Ontologías",
+    "REVISTAS_MES": "Revistas MES",
+    "DIRECTORIO_MES": "Directorio MES",
+    "DIRECTORIO_MES_SUB": "Registro de Revistas Científicas del MES",
+    "ACCEDER": "Acceder",
     "PROYECTO_TOCORORO": "Proyecto Tocororo, un esfuerzo por la comunicación científica en Cuba",
     "PROYECTO_VLIR": "Proyecto VLIR",
     "SCEIBA_PRIVACIDAD_1": "Sceiba es de código y acceso abierto y distribuye sus contenidos,",
