Added more transaltions for home and contact components.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -36,6 +36,22 @@
     "DIRECTORIO_MES": "MES Directory",
     "DIRECTORIO_MES_SUB": "MES Register of Scientific Journals",
     "ACCEDER": "Access",
+    "PROXIMAMENTE": "Coming soon",
+    "PERSONAS": "People",
+    "PERSONAS_SUB": "Cuban ORCID",
+    "EVALUACION": "Evaluation",
+    "EVALUACION_SUB": "Own Methodologies",
+    "CARPETAS_PERS": "Personal Folders",
+    "CARPETAS_PERS_SUB": "Your Interests and Experiences",
+    "PARTICIPANTES": "Participants",
+    "CONTACTE_CON_NOS": "Contact us",
+    "CORREO": "Email",
+    "ESCRIBA_CORREO": "Write the email",
+    "ASUNTO": "Subject",
+    "ESCRIBA_ASUNTO": "Write the message subject",
+    "CUERPO": "Body",
+    "ESCRIBA_CUERPO": "Write the message body",
+    "ENVIAR": "Send",
     "PROYECTO_TOCORORO": "Tocororo Project, an effort for scientific communication in Cuba",
     "PROYECTO_VLIR": "VLIR Project",
     "SCEIBA_PRIVACIDAD_1": "Sceiba is open source and open access and distributes its contents,",
