--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -36,6 +36,22 @@
     "DIRECTORIO_MES": "Directorio MES",
     "DIRECTORIO_MES_SUB": "Registro de Revistas Científicas del MES",
     "ACCEDER": "Acceder",
+    "PROXIMAMENTE": "Próximamente",
+    "PERSONAS": "Personas",
+    "PERSONAS_SUB": "ORCID Cubano",
+    "EVALUACION": "Evaluación",
+    "EVALUACION_SUB": "Metodologías Propias",
+    "CARPETAS_PERS": "Carpetas Personales",
+    "CARPETAS_PERS_SUB": "Tus Intereses y Experiencias",
+    "PARTICIPANTES": "Participantes",
+    "CONTACTE_CON_NOS": "Contacte con nosotros",
+    "CORREO": "Correo",
+    "ESCRIBA_CORREO": "Escriba el correo electrónico",
+    "ASUNTO": "Asunto",
+    "ESCRIBA_ASUNTO": "Escriba el asunto a tratar",
+    "CUERPO": "Cuerpo",
+    "ESCRIBA_CUERPO": "Escriba el cuerpo del mensaje",
+    "ENVIAR": "Enviar",
     "PROYECTO_TOCORORO": "Proyecto Tocororo, un esfuerzo por la comunicación científica en Cuba",
     "PROYECTO_VLIR": "Proyecto VLIR",
     "SCEIBA_PRIVACIDAD_1": "Sceiba es de código y acceso abierto y distribuye sus contenidos,",
