Fixed the bug about `translate.service.d.ts` when compiling the application Sceiba.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -57,5 +57,7 @@
     "SCEIBA_PRIVACIDAD_1": "Sceiba is open source and open access and distributes its contents,",
     "SCEIBA_PRIVACIDAD_2": "unless otherwise noted, under the",
     "PORTAL_PUB": "Cuban scientific publications portal",
-    "DESARROLLADO_CON": "Developed with"
+    "DESARROLLADO_CON": "Developed with",
+    "ESCRIBA_CRITERIO_PRESIONE_ENTER": "Write a phrase and press Enter",
+    "BUSCAR": "Search"
 }
