--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -57,5 +57,7 @@
     "SCEIBA_PRIVACIDAD_1": "Sceiba es de código y acceso abierto y distribuye sus contenidos,",
     "SCEIBA_PRIVACIDAD_2": "a no ser que se indique lo contrario, bajo la",
     "PORTAL_PUB": "Portal de publicaciones científicas cubanas",
-    "DESARROLLADO_CON": "Desarrollado con"
+    "DESARROLLADO_CON": "Desarrollado con",
+    "ESCRIBA_CRITERIO_PRESIONE_ENTER": "Escriba un criterio y presione Enter",
+    "BUSCAR": "Buscar"
 }
