Improved the translation identifiers for `QueryInputComponent` component in `toco-lib`.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -58,6 +58,9 @@
     "SCEIBA_PRIVACIDAD_2": "unless otherwise noted, under the",
     "PORTAL_PUB": "Cuban scientific publications portal",
     "DESARROLLADO_CON": "Developed with",
-    "ESCRIBA_CRITERIO_PRESIONE_ENTER": "Write a phrase and press Enter",
-    "BUSCAR": "Search"
+    "TOCO_SEARCH_QUERY_INPUT": {
+        "INPUT_SEARCH_LABEL": "Search",
+        "INPUT_SEARCH_PLACEHOLDER": "Write a phrase and press Enter",
+        "BUTTON_SEARCH": "Search"
+    }
 }
