Improve the PageNotFoundComponent
The information that was showed was very poor.
Added information about error and redirection to Home page.
The component also follows the i18n standard of the application.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -62,5 +62,7 @@
         "INPUT_SEARCH_LABEL": "Search",
         "INPUT_SEARCH_PLACEHOLDER": "Write a phrase and press Enter",
         "BUTTON_SEARCH": "Search"
-    }
+    },
+    "PAGINA_NO_ENCONTRADA_DISCULPA": "Sorry, the page you requested could not be found!",
+    "PAGINA_NO_ENCONTRADA_REDIRECCION": "Let us take you Home"
 }
