--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -23,6 +23,7 @@
     "YO": "Yo",
     "PUB_CIENT_CUBANAS": "Publicaciones Científicas Cubanas",
     "PROD_SERV": "Productos y Servicios",
+    "SCEIBA": "Sceiba",
     "CATALOGO": "Catálogo",
     "SCEIBA_CATALOGO": "Sceiba Catálogo",
     "SCEIBA_CATALOGO_SUB": "Catálogo de Publicaciones Científicas Cubanas",
@@ -52,17 +53,22 @@
     "CUERPO": "Cuerpo",
     "ESCRIBA_CUERPO": "Escriba el cuerpo del mensaje",
     "ENVIAR": "Enviar",
-    "PROYECTO_TOCORORO": "Proyecto Tocororo, un esfuerzo por la comunicación científica en Cuba",
+    "PROYECTO_TOCORORO": "Proyecto Tocororo",
+    "PROYECTO_TOCORORO_TEXTO": "Proyecto Tocororo, un esfuerzo por la comunicación científica en Cuba",
     "PROYECTO_VLIR": "Proyecto VLIR",
+    "PROYECTO_VLIR_TEXTO": "Proyecto VLIR",
     "SCEIBA_PRIVACIDAD_1": "Sceiba es de código y acceso abierto y distribuye sus contenidos,",
     "SCEIBA_PRIVACIDAD_2": "a no ser que se indique lo contrario, bajo la",
     "PORTAL_PUB": "Portal de publicaciones científicas cubanas",
     "DESARROLLADO_CON": "Desarrollado con",
+
     "TOCO_SEARCH_QUERY_INPUT": {
         "INPUT_SEARCH_LABEL": "Buscar",
         "INPUT_SEARCH_PLACEHOLDER": "Escriba un criterio y presione Enter",
         "BUTTON_SEARCH": "Buscar"
     },
-    "PAGINA_NO_ENCONTRADA_DISCULPA": "Lo sentimos, la página que usted solicitó no pudo ser encontrada!",
-    "PAGINA_NO_ENCONTRADA_REDIRECCION": "Vamos a llevarlo a la página Principal"
+
+    "TOCO_NG_PAGINA_NO_ENCONT_DISCULPA": "¡Lo sentimos, la página que usted solicitó no pudo ser encontrada!",
+    "TOCO_NG_PAGINA_NO_ENCONT_REDIRECCION": "Vamos a llevarlo a la página Principal",
+    "TOCO_NG_PAGINA_NO_ENCONT_IMG_ALT_TEXT": "Sceiba"
 }
