update footer and header

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -21,7 +21,7 @@
     "ADMINISTRACION": "Settings",
     "SALIR": "Exit",
     "YO": "Me",
-    "PUB_CIENT_CUBANAS": "Cuban Scientific Publications",
+    "PUB_CIENT_CUBANAS": "Portal of Cuban Scientific Publications",
     "PROD_SERV": "Products and Services",
     "SCEIBA": "Sceiba",
     "CATALOGO": "Catalog",
@@ -61,6 +61,12 @@
     "SCEIBA_PRIVACIDAD_2": "unless otherwise noted, under the",
     "PORTAL_PUB": "Cuban scientific publications portal",
     "DESARROLLADO_CON": "Developed with",
+    "FOOTER_TEXT": "Sceiba aims to establish a centralized open system that facilitates the monitoring and evaluation of scientific publications at national level",
+    "FOOTER_TEXT_ENLACE": "Links",
+    "SIGUENOS": "Follow us",
+    "FOOTER_TEXT_INFORMACION": "General Information",
+    "FOOTER_TEXT_DEVELOP": "develop by",
+    "FOOTER_TEXT_AND": "and",
 
     "TOCO_SEARCH_QUERY_INPUT": {
         "INPUT_SEARCH_LABEL": "Search",
