--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,18 +1,6 @@
 {
     "CONJUNCION_Y": "and",
-    "BETA": "BETA",
-    "BETA_TOOLTIP": "This is a BETA product configured for testing purposes. Some features can not work properly.",
-    "MENU_INICIO": "Start menu",
-    "IDIOMA": "Language",
-    "REDES_SOC": "Social networks",
-    "APLICACIONES": "Applications",
-    "AYUDA": "Help",
-    "USUARIO": "User",
-    "AUTENTICARSE": "Log in",
-    "REGISTRARSE": "Sign up",
-    "ACERCA_DE": "About",
-    "PRIVACIDAD": "Privacy",
-    "CONTACTOS": "Contact",
+
     "DES_ORGANIZACIONES": "Disambiguate organizations",
     "IMPORT": "Import",
     "PERFIL_USUARIO": "User profile",
@@ -67,6 +55,21 @@
     "FOOTER_TEXT_INFORMACION": "General Information",
     "FOOTER_TEXT_DEVELOP": "develop by",
     "FOOTER_TEXT_AND": "and",
+
+    "TOCO_NG_BETA": "BETA",
+    "TOCO_NG_BETA_TOOLTIP": "This is a BETA product configured for testing purposes. Some features can not work properly.",
+    "TOCO_NG_PAGINA_LOGO_IMG_ALT_TEXT": "Sceiba",
+    "TOCO_NG_MENU_INICIO": "Start menu",
+    "TOCO_NG_IDIOMA": "Language",
+    "TOCO_NG_REDES_SOC": "Social networks",
+    "TOCO_NG_APLICACIONES": "Applications",
+    "TOCO_NG_AYUDA": "Help",
+    "TOCO_NG_USUARIO": "User",
+    "TOCO_NG_AUTENTICARSE": "Log in",
+    "TOCO_NG_REGISTRARSE": "Sign up",
+    "TOCO_NG_ACERCA_DE": "About",
+    "TOCO_NG_PRIVACIDAD": "Privacy",
+    "TOCO_NG_CONTACTOS": "Contact",
 
     "TOCO_SEARCH_QUERY_INPUT": {
         "INPUT_SEARCH_LABEL": "Search",
