--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -12,7 +12,7 @@
     "REGISTRARSE": "Sign up",
     "ACERCA_DE": "About",
     "PRIVACIDAD": "Privacy",
-    "CONTACTOS": "Contact",
+    "CONTACTOS": "Team & Contact",
     "DES_ORGANIZACIONES": "Disambiguate organizations",
     "IMPORT": "Import",
     "PERFIL_USUARIO": "User profile",
