update contact page and home view

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -26,21 +26,21 @@
     "SCEIBA": "Sceiba",
     "CATALOGO": "Catalog",
     "SCEIBA_CATALOGO": "Sceiba Catalog",
-    "SCEIBA_CATALOGO_SUB": "Catalog of Cuban Scientific Publications",
+    "SCEIBA_CATALOGO_SUB": "Sceiba Discovery tool",
     "ORGANIZACIONES": "Organizations",
     "SCEIBA_ORGANIZACIONES": "Sceiba Organizations",
     "SCEIBA_ORGANIZACIONES_SUB": "Identification System for Organizations",
     "VOCABULARIOS": "Vocabularies",
     "SCEIBA_VOCABULARIOS": "Sceiba Vocabularies",
-    "SCEIBA_VOCABULARIOS_SUB": "Thesaurus and Ontologies System",
+    "SCEIBA_VOCABULARIOS_SUB": "System for controlled vocabularies ",
     "REVISTAS_MES": "MES Journals",
     "DIRECTORIO_MES": "MES Directory",
-    "DIRECTORIO_MES_SUB": "MES Register of Scientific Journals",
+    "DIRECTORIO_MES_SUB": "Directory of Scientific Journals",
     "ACCEDER": "Access",
     "PROXIMAMENTE": "Coming soon",
-    "PERSONAS": "People",
-    "PERSONAS_SUB": "Cuban ORCID",
-    "EVALUACION": "Evaluation",
+    "PERSONAS": "Persons",
+    "PERSONAS_SUB": "Persons - Authority control system",
+    "EVALUACION": "Evaluation tools and methodologies",
     "EVALUACION_SUB": "Own Methodologies",
     "CARPETAS_PERS": "Personal Folders",
     "CARPETAS_PERS_SUB": "Your Interests and Experiences",
