--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -26,21 +26,21 @@
     "SCEIBA": "Sceiba",
     "CATALOGO": "Catálogo",
     "SCEIBA_CATALOGO": "Sceiba Catálogo",
-    "SCEIBA_CATALOGO_SUB": "Catálogo de Publicaciones Científicas Cubanas",
+    "SCEIBA_CATALOGO_SUB": "Herramienta de descubrimiento de publicaciones científicas",
     "ORGANIZACIONES": "Organizaciones",
     "SCEIBA_ORGANIZACIONES": "Sceiba Organizaciones",
     "SCEIBA_ORGANIZACIONES_SUB": "Sistema de Identificación de Organizaciones",
     "VOCABULARIOS": "Vocabularios",
     "SCEIBA_VOCABULARIOS": "Sceiba Vocabularios",
-    "SCEIBA_VOCABULARIOS_SUB": "Sistema de Tesauros y Ontologías",
+    "SCEIBA_VOCABULARIOS_SUB": "Sistema de gestión de vocabularios controlados",
     "REVISTAS_MES": "Revistas MES",
     "DIRECTORIO_MES": "Directorio MES",
-    "DIRECTORIO_MES_SUB": "Registro de Revistas Científicas del MES",
+    "DIRECTORIO_MES_SUB": "Revistas científicas del Ministerio de Educación Superior",
     "ACCEDER": "Acceder",
     "PROXIMAMENTE": "Próximamente",
     "PERSONAS": "Personas",
-    "PERSONAS_SUB": "ORCID Cubano",
-    "EVALUACION": "Evaluación",
+    "PERSONAS_SUB": "Personas - Sistema de control de autoridades",
+    "EVALUACION": "Herramienta y metodología de evaluación",
     "EVALUACION_SUB": "Metodologías Propias",
     "CARPETAS_PERS": "Carpetas Personales",
     "CARPETAS_PERS_SUB": "Tus Intereses y Experiencias",
