update menu APP

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -25,15 +25,21 @@
     "PROD_SERV": "Products and Services",
     "SCEIBA": "Sceiba",
     "CATALOGO": "Catalog",
+    "BUSQUEDA": "Discover",
     "SCEIBA_CATALOGO": "Sceiba Catalog",
     "SCEIBA_CATALOGO_SUB": "Sceiba Discovery tool",
     "ORGANIZACIONES": "Organizations",
     "SCEIBA_ORGANIZACIONES": "Sceiba Organizations",
+    "ORGANIZACION": "Organization",
     "SCEIBA_ORGANIZACIONES_SUB": "Identification System for Organizations",
     "VOCABULARIOS": "Vocabularies",
+    "VOCABULARIO": "Vocabulary",
     "SCEIBA_VOCABULARIOS": "Sceiba Vocabularies",
     "SCEIBA_VOCABULARIOS_SUB": "System for controlled vocabularies ",
     "REVISTAS_MES": "MES Journals",
+    "SMOODLE": "S-Moodle",
+    "REVISTAS": "Journals",
+    "EVALUACION_APP": "Evaluation",
     "DIRECTORIO_MES": "MES Directory",
     "DIRECTORIO_MES_SUB": "Directory of Scientific Journals",
     "ACCEDER": "Access",
