--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -25,22 +25,28 @@
     "PROD_SERV": "Productos y Servicios",
     "SCEIBA": "Sceiba",
     "CATALOGO": "Catálogo",
+    "BUSQUEDA": "Descubre",
     "SCEIBA_CATALOGO": "Sceiba Catálogo",
     "SCEIBA_CATALOGO_SUB": "Herramienta de descubrimiento de publicaciones científicas",
     "ORGANIZACIONES": "Organizaciones",
     "SCEIBA_ORGANIZACIONES": "Sceiba Organizaciones",
+    "ORGANIZACION": "Organización",
     "SCEIBA_ORGANIZACIONES_SUB": "Sistema de Identificación de Organizaciones",
     "VOCABULARIOS": "Vocabularios",
+    "VOCABULARIO": "Vocabulario",
     "SCEIBA_VOCABULARIOS": "Sceiba Vocabularios",
     "SCEIBA_VOCABULARIOS_SUB": "Sistema de gestión de vocabularios controlados",
     "REVISTAS_MES": "Revistas MES",
+    "SMOODLE": "S-Moodle",
+    "EVALUACION_APP": "Evaluación",
+    "REVISTAS": "Revistas",
     "DIRECTORIO_MES": "Directorio MES",
     "DIRECTORIO_MES_SUB": "Revistas científicas del Ministerio de Educación Superior",
     "ACCEDER": "Acceder",
     "PROXIMAMENTE": "Próximamente",
     "PERSONAS": "Personas",
     "PERSONAS_SUB": "Personas - Sistema de control de autoridades",
-    "EVALUACION": "Herramienta y metodología de evaluación",
+    "EVALUACION": "Herramientas y metodologías de evaluación",
     "EVALUACION_SUB": "Metodologías Propias",
     "CARPETAS_PERS": "Carpetas Personales",
     "CARPETAS_PERS_SUB": "Tus Intereses y Experiencias",
