--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,6 +2,7 @@
     "CONJUNCION_Y": "and",
     "BETA": "BETA",
     "BETA_TOOLTIP": "This is a BETA product configured for testing purposes. Some features can not work properly.",
+    "SCEIBA_ORGANIZACIONES_TOOLTIP": "Go to start of Sceiba Organizations",
     "MENU_INICIO": "Start menu",
     "IDIOMA": "Language",
     "REDES_SOC": "Social networks",
@@ -24,8 +25,12 @@
     "PUB_CIENT_CUBANAS": "Portal of Cuban Scientific Publications",
     "PROD_SERV": "Products and Services",
     "SCEIBA": "Sceiba",
+    "HOME": "Home",
+    "REPORTS_STATISTICS": "Reports and Statistics",
     "CATALOGO": "Catalog",
     "BUSQUEDA": "Discover",
+    "CATALOG_PERMISSIONS": "Permissions on the Catalog",
+    "EXPLORE_CATALOG": "Explore the Catalog",
     "SCEIBA_CATALOGO": "Sceiba Catalog",
     "SCEIBA_CATALOGO_SUB": "Sceiba Discovery tool",
     "ORGANIZACIONES": "Organizations",
