--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -2,6 +2,7 @@
     "CONJUNCION_Y": "y",
     "BETA": "BETA",
     "BETA_TOOLTIP": "Este es un producto BETA configurado con propósitos de prueba. Algunas características pueden no funcionar correctamente.",
+    "SCEIBA_ORGANIZACIONES_TOOLTIP": "Ir al inicio de Sceiba Organizaciones",
     "MENU_INICIO": "Menu de inicio",
     "IDIOMA": "Idioma",
     "REDES_SOC": "Redes sociales",
@@ -12,6 +13,7 @@
     "REGISTRARSE": "Registrarse",
     "ACERCA_DE": "Acerca de",
     "PRIVACIDAD": "Privacidad",
+    "FAQS": "FAQs",
     "CONTACTOS": "Contactos",
     "DES_ORGANIZACIONES": "Desambiguar organizaciones",
     "IMPORT": "Importar",
@@ -24,7 +26,11 @@
     "PUB_CIENT_CUBANAS": "Portal de Publicaciones Científicas Cubanas",
     "PROD_SERV": "Productos y Servicios",
     "SCEIBA": "Sceiba",
+    "HOME": "Inicio",
+    "REPORTS_STATISTICS": "Reportes y Estadísticas",
     "CATALOGO": "Catálogo",
+    "CATALOG_PERMISSIONS": "Permisos sobre el Catálogo",
+    "EXPLORE_CATALOG": "Explorar el Catálogo",
     "BUSQUEDA": "Descubre",
     "SCEIBA_CATALOGO": "Sceiba Catálogo",
     "SCEIBA_CATALOGO_SUB": "Herramienta de descubrimiento de publicaciones científicas",
