--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -27,12 +27,13 @@
     "SCEIBA": "Sceiba",
     "HOME": "Home",
     "REPORTS_STATISTICS": "Reports and Statistics",
-    "CATALOGO": "Catalog",
+    "SCEIBA_CATALOGO": "Catalog",
+    "SCEIBA_CATALOGO_SUB": "Sceiba's primary sources",
     "BUSQUEDA": "Discover",
     "CATALOG_PERMISSIONS": "Permissions on the Catalog",
     "EXPLORE_CATALOG": "Explore the Catalog",
-    "SCEIBA_CATALOGO": "Sceiba Catalog",
-    "SCEIBA_CATALOGO_SUB": "Sceiba Discovery tool",
+    "SCEIBA_DESCUBRE": "Sceiba Catalog",
+    "SCEIBA_DESCUBRE_SUB": "Sceiba Discovery tool",
     "ORGANIZACIONES": "Organizations",
     "SCEIBA_ORGANIZACIONES": "Sceiba Organizations",
     "ORGANIZACION": "Organization",
@@ -43,6 +44,7 @@
     "SCEIBA_VOCABULARIOS_SUB": "System for controlled vocabularies ",
     "REVISTAS_MES": "MES Journals",
     "SMOODLE": "S-Moodle",
+    "SMOODLE_SUB": "Sceiba Courses",
     "REVISTAS": "Journals",
     "EVALUACION_APP": "Evaluation",
     "DIRECTORIO_MES": "MES Directory",
