--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -28,12 +28,13 @@
     "SCEIBA": "Sceiba",
     "HOME": "Inicio",
     "REPORTS_STATISTICS": "Reportes y Estadísticas",
-    "CATALOGO": "Catálogo",
+    "SCEIBA_CATALOGO": "Catálogo",
+    "SCEIBA_CATALOGO_SUB": "Catálogo de fuentes primarias de Sceiba",
     "CATALOG_PERMISSIONS": "Permisos sobre el Catálogo",
     "EXPLORE_CATALOG": "Explorar el Catálogo",
     "BUSQUEDA": "Descubre",
-    "SCEIBA_CATALOGO": "Sceiba Catálogo",
-    "SCEIBA_CATALOGO_SUB": "Herramienta de descubrimiento de publicaciones científicas",
+    "SCEIBA_DESCUBRE": "Sceiba Catálogo",
+    "SCEIBA_DESCUBRE_SUB": "Herramienta de descubrimiento de publicaciones científicas",
     "ORGANIZACIONES": "Organizaciones",
     "SCEIBA_ORGANIZACIONES": "Sceiba Organizaciones",
     "ORGANIZACION": "Organización",
@@ -44,6 +45,7 @@
     "SCEIBA_VOCABULARIOS_SUB": "Sistema de gestión de vocabularios controlados",
     "REVISTAS_MES": "Revistas MES",
     "SMOODLE": "S-Moodle",
+    "SMOODLE_SUB": "Cursos Sceiba",
     "EVALUACION_APP": "Evaluación",
     "REVISTAS": "Revistas",
     "DIRECTORIO_MES": "Directorio MES",
